# smartDog

./: LICENSE  README.md  docker-compose.yml
.github/workflows/: rust.yml
smartDog-api/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  sqlx-data.json
smartDog-api/examples/: bowl_example.http
smartDog-api/migrations/: 20210808204904_initial_database.sql  20210808205658_Alter_bowl_table.sql  20210808210034_history_table_change.sql  20210808210859_alter_type_for_bowl.sql  20210808211612_Add_field_for_disabled.sql  20210808211940_disabled_not_null.sql
smartDog-api/migrations/2021-01-03-102654_create_bowls/: down.sql  up.sql
smartDog-api/src/: api.rs  controllers.rs  dao.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs  services.rs
smartDog-api/src/controllers/: bowls.rs  bowlscontroller.rs  mod.rs  systemcontroller.rs
smartDog-api/src/models/: bowls.rs  mod.rs  system.rs
smartDog-api/src/routes/: bowls.rs  history.rs  mod.rs
smartDog-api/src/services/: bowlservice.rs  mod.rs  msgservice.rs
smartDog-api/static/: index.html  swagger.json
smartDog-api/tests/: newbowl.http
smartdogapp/: README.md  pubspec.yaml
smartdogapp/android/app/: build.gradle
smartdogapp/android/app/src/debug/: AndroidManifest.xml
smartdogapp/android/app/src/main/: AndroidManifest.xml
smartdogapp/android/app/src/main/kotlin/com/example/smartdogapp/: MainActivity.kt
smartdogapp/ios/Runner/: Info.plist
smartdogapp/ios/Runner.xcodeproj/: project.pbxproj
smartdogapp/lib/: main.dart  messaging.dart  notificationbadge.dart  pushnotification.dart
smartdogapp/test/: widget_test.dart
smartdogapp/web/: index.html  manifest.json
