[package]
name = "smartdog_api"
version = "0.1.0"
authors = ["Kenneth Fossen <fossen.kenneth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "smartdog-api"

[dependencies]
actix-http = "3.0.0-beta.8"
actix-service = "2.0.0"
actix-web = "4.0.0-beta.8"
dotenv = "0.15"
env_logger = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4.19"
serde = "1.0.126"
serde_json = "1.0.64"
sqlx = { version = "0.5.5", default-features = false, features = ["offline", "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
ormx = { version = "0.7.0", features = ["postgres"]}
anyhow = "1.0.42"
# fcm = "0.8.1"

[dev-dependencies]
reqwest = { version="0.11.4" , features = ["json", "rustls-tls"] }
actix-rt = "2.2.0"
tokio = { version = "1", features = ["macros", "rt"] }
