[package]
name = "smartdog_api"
version = "0.1.0"
authors = ["Kenneth Fossen <fossen.kenneth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "smartdog-api"

[dependencies]
actix-http = "3.0.0-beta.11"
actix-service = "2.0.1"
actix-web = "4.0.0-beta.10"
dotenv = "0.15.0"
env_logger = "0.9.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = "0.4.19"
serde = "1.0.130"
serde_json = "1.0.68"
sqlx = { version = "0.5.9", default-features = false, features = ["offline", "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
ormx = { version = "0.10.0", features = ["postgres"] }
anyhow = "1.0.44"
# fcm = "0.8.1"

[dev-dependencies]
reqwest = { version = "0.11.6", features = ["json", "rustls-tls"] }
actix-rt = "2.3.0"
tokio = { version = "1.13.0", features = ["macros", "rt"] }
